feat: Annotate API UpdateUser
